<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLoginTitle"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:layout_marginRight="32dp"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/imageViewShowPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/editTextUsername"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="-2dp"
        android:clickable="true"
        android:contentDescription="Toggle Password Visibility"
        android:focusable="true"
        android:onClick="togglePasswordVisibility"
        android:src="@drawable/baseline_visibility_off_24"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/masuk"
        tools:ignore="NotSibling,DuplicateSpeakableTextCheck" />

</RelativeLayout>
